Fix svg visibility

--- a/resources/js/src/assets/styles/style.scss
+++ b/resources/js/src/assets/styles/style.scss
@@ -498,10 +498,10 @@ $blurSvgDuration: 20s;
 @media screen and (max-width: 767px) {
     .main-background-cover {
         .top-content {
-            padding-top: 1vh;
-        }
-        .blur-background {
-            visibility: hidden;
+            padding-top: 10vh;
+            .top-home-details {
+                height: 100%;
+            }
         }
         .top-home-details h1 {
             font-size: 2.5rem;
@@ -511,7 +511,7 @@ $blurSvgDuration: 20s;
             padding-top: 20px;
         }
         .top-home-videos video {
-            width: 100%;
+            display: none;
         }
     }
 }
